--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "antd": "^5.24.6",
+    "axios": "^1.9.0",
     "dompurify": "^3.2.5",
     "mdast-util-to-hast": "^13.2.0",
     "react": "^19.1.0",
